Fix grid on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ nav {
 .portfolio {
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(155px, 1fr));
 }
 
 .portfolio__item {
